2002-11-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/xml-tree.c (cmd_set_attr): Use gal unicode wrappers

	* src/widgets/sp-xmlview-attr-list.c (event_attr_changed): Use gal unicode wrappers

	* src/widgets/sp-xmlview-content.c (event_content_changed): Use gal unicode wrappers
	(sp_xmlview_content_changed): Ditto

	* src/widgets/sp-xmlview-tree.c (element_attr_changed): Use gal unicode wrapper
	(text_content_changed): Ditto

	* src/dialogs/xml-tree.c: Sorted out includes a bit
	(set_tree_desktop): Comment aout transient, as some WMs do not do it proper
	(on_desktop_selection_changed): Set/release block
	(on_tree_unselect_row): Ditto
	(on_tree_select_row): Ditto
	(get_dt_select): Use selection helper methods

2002-11-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-gnome.c (nr_typeface_gnome_glyph_outline_get): Use
	metrics properly

	* src/libnrtype/nr-type-ft2.c (nr_typeface_ft2_ensure_slot_v): Implement for
	font missing vertical metrics
	(nr_typeface_ft2_ensure_outline): Ditto

	* src/libnrtype/nr-type-directory.c (nr_type_read_private_list): Read face
	number from proper place

	* src/libnrtype/nr-font.c (nr_font_generic_glyph_area_get): Implement

	* src/sp-text.c (sp_string_calculate_dimensions): Use metrics properly
	(sp_string_set_shape): Ditto

	* src/print.c (sp_print_stroke): Print dash

2002-11-14  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/file.c (sp_file_exit): Close all views before exiting

	* src/interface.c (sp_ui_close_view): Destroy viewwidget properly
	(sp_ui_close_all): New method

	* src/sp-rect.c (sp_rect_write_transform): Adjust dash in addition to stroke width

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Only dash if
	total dash length is >= 1.0 pixels

	* src/dialogs/stroke-style.c (sp_stroke_style_line_update_repr): Divide
	dash values by line width
	(sp_stroke_style_scale_line): Multiply dash values by line width
	(sp_stroke_style_line_update): Ditto
