@@ -219,7 +219,8 @@ sp_select_context_item_handler (SPEventContext *event_context, SPItem *item, Gdk
 			sc->moved = FALSE;
 			sc->item = item;
 			sp_canvas_item_grab (SP_CANVAS_ITEM (desktop->drawing),
-					     GDK_KEY_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK,
+					     GDK_KEY_PRESS_MASK | GDK_BUTTON_RELEASE_MASK |
+					     GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK,
 					     NULL, event->button.time);
 			sc->grabbed = SP_CANVAS_ITEM (desktop->drawing);
 			ret = TRUE;
